[gd_scene load_steps=5 format=3 uid="uid://b7ln7eu3lkwpu"]

[ext_resource type="Script" uid="uid://qkedh6h0swdy" path="res://achievements_menu.gd" id="1_8a2sq"]
[ext_resource type="PackedScene" uid="uid://d1h0jyygsrih6" path="res://Scene/option_menu.tscn" id="2_wh4ke"]
[ext_resource type="PackedScene" uid="uid://cp152pr7bj3qc" path="res://Scene/back_button.tscn" id="3_3ejo7"]
[ext_resource type="Texture2D" uid="uid://dgqc3bx6iwmlh" path="res://Scene/settins icon.png" id="4_3ejo7"]

[node name="AchievementsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8a2sq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.132826, 0.661714, 0.592877, 0.788235)

[node name="ListContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1154.0
offset_bottom = 646.0

[node name="option_menu" parent="." instance=ExtResource("2_wh4ke")]
visible = false

[node name="BackButton" parent="." instance=ExtResource("3_3ejo7")]
layout_mode = 0

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1064.0
offset_top = 13.0
offset_right = 1145.0
offset_bottom = 89.0
icon = ExtResource("4_3ejo7")
expand_icon = true

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
